<resources>
    <string name="app_name">TwentyOne</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_send_coins">Получить монеты</string>
    <string name="menu_news">Новости</string>
    <string name="menu_rating">Рейтинг</string>
    <string name="menu_rules">Правила</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_start_game">Начать игру</string>
    <string name="menu_friend">Друзья</string>
    <string name="menu_tournament">Турнир</string>

    <string name="menu_logout">Выйти</string>

    <string name="profile_name">Имя</string>
    <string name="profile_nick">Никнейм</string>
    <string name="profile_email">Email</string>
    <string name="profile_friend">Друзья</string>

    <string name="fa_heart_o">\uf08a</string>
    <string name="fa_retweet">\uf079</string>

    <string name="login_input_error">Проверьте введенные данные</string>
    <string name="login_register_success">Вы зарегистрировались</string>
    <string name="login_register_error">Проверьте введенные данные</string>
    <string name="login_error">Неверные данные</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
